apps/krakend-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend
spec:
  selector:
    app: krakend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
