apps/krakend-gateway/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  namespace: athlefi-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: gateway-dev.athlefi.us-east-1.dedsec.com.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend
                port:
                  number: 80
  tls:
    - hosts:
        - gateway-dev.athlefi.us-east-1.dedsec.com.mx
