apps/krakend-gateway/base/krakend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-gateway
  labels:
    app.kubernetes.io/name: krakend-gateway
    app.kubernetes.io/instance: krakend-gateway
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: athlefi
    app.kubernetes.io/managed-by: kustomize
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: gateway-dev.athlefi.us-east-1.dedsec.com.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend-gateway
                port:
                  number: 80
  tls:
    - hosts:
        - gateway-dev.athlefi.us-east-1.dedsec.com.mx
